--- a/src/Component/Card.module.css
+++ b/src/Component/Card.module.css
@@ -1,6 +1,11 @@
+* {
+    padding: 0px;
+    margin: 0px;
+    box-sizing: border-box;
+}
 
 .card {
-    width: 250px;
+    width: 40%;
     padding: 15px;
     margin: 10px;
     border: 1px solid #ccc;
@@ -9,7 +14,6 @@
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
 }
 
 .title {
@@ -20,7 +24,9 @@
     margin-bottom: 10px;
 }
 
-.button {
+.buttonDetails {
+    margin: 0 auto;
+    width: 30%;
     text-decoration: none;
     color: white;
     background-color: #007bff;
@@ -28,5 +34,17 @@
     border-radius: 4px;
     text-align: center;
     font-size: 14px;
-    margin-top: auto;
+}
+
+
+.star {
+    position: absolute;
+    top: 10px;
+    right: 15px;
+    user-select: none;
+    font-size: 3em;
+}
+
+.card {
+    position: relative;
 }
