--- a/src/pages/DetailsPage.module.css
+++ b/src/pages/DetailsPage.module.css
@@ -1,55 +1,7 @@
 .title {
     display: flex;
     justify-content: center;
-    margin: 20px 0;
-    font-size: 2em;
+    margin: 30px;
+    font-size: 3em;
     font-weight: bold;
-}
-
-.card {
-    display: flex;
-    justify-content: center;
-    gap: 30px;
-    padding: 0 20px;
-    align-items: flex-start;
-    max-width: 900px;
-    margin: 0 auto;
-    border: 1px solid #ddd;
-    border-radius: 10px;
-    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
-    background: #fff;
-
-}
-
-.imageContainer {
-    flex: 1;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.image {
-    width: 100%;
-    height: 250px;
-    object-fit: contain;
-    border-radius: 8px;
-    display: flex;
-    align-items: center;
-}
-
-.details {
-    flex: 1;
-    padding: 10px;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-}
-
-.details p {
-    font-size: 1em;
-    margin-bottom: 5px;
-}
-
-.details p strong {
-    margin-right: 5px;
 }
